--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,5 @@
 DATABASE_URL=""
 
-#Github
-NUXT_GITHUB_ID=
-NUXT_GITHUB_SECRET=
-
 #Cloudinary
 NUXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
 NUXT_PUBLIC_UPLOAD_PRESET=
@@ -14,3 +10,8 @@ NUXT_CLOUDINARY_API_SECRET=""
 NUXT_PUBLIC_STRIPE_KEY=
 NUXT_STRIPE_SECRET=
 NUXT_STRIPE_WEBHOOK_SECRET=
+
+#NUXT_AUTH_UTILS
+NUXT_OAUTH_GITHUB_CLIENT_ID=
+NUXT_OAUTH_GITHUB_CLIENT_SECRET=
+NUXT_SESSION_PASSWORD=
